--- a/Module-1-HTML/Theory/Module 1 HTML.html
+++ b/Module-1-HTML/Theory/Module 1 HTML.html
@@ -1,148 +1,144 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Assignment</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Module-1-HTML</title>
 </head>
 <body>
-<xmp>  
-                                               Module 1 (HTML)																					
+	<center><h1>Module-1-HTML</h1></center>
+	<p>1.Are the HTML tags and element the same thing?</p>
+	<p>Ans:- HTML Tags and Element are not same thing.</p>
+		  <p>HTML Tags:- Html tags are the keyword in html which help us to format the html page and help us to write the 
+			 content in different types of styles like < b >,< i >,< u > etc.</p>
+		  <p>Tags are two type :-</p>
+		<p>1.Opening tag and closing tags with angular brackets ex.< html >, < /html > , < head > , < h1 >,< /h1 > etc.</p>
+		<p>2.Self Closing tags ,empty,void tags ex. < tags / > , < img > , < br > , < meta > ,< hr > etc.</p>
+		<br/>
+	<p>2.What are tags and attributes in HTML?</p>
+	<p>Ans:-Tags:-HTML tags aret the keyword in html which help us to format the html page and help us to write the content
+		in different types of syles.
+	</p>
+	<p>
+		Attributes:-Attributes provide extra information to the html element like class name,background colour,etc.Attributes
+		give actual contents to change and diiffrenet value to change actual contents.
+	</p><br/>
+	<p>3.What are void element in HTML?</p>
+	<p>Ans:-Void Element:- Void elements in html are tags that don't have a closing tag.They're like one -piece tags.
+			Example include < br > , < img > and < hr >. </p>
+		 <p>They're used for specific purpose like line breaks , image and horizontal lines.</p><br/>
+	<p>4.What are HTML Entities?</p>
+	<p>Ans:-HTML Entities are special codes used to diplay characters that have a specific meanig in HTML, like < and >. for
+			example,"&lt;" represents <, and "&gt;" represents >. Entities help show these characters correctly on webpages 
+			without confusing the browser.
+	</p><br/>
 
-1.	Are the HTML tags and elements the same thing? 
-Ans:- HTML Tags and Elements are not same thing.
-      HTML Tags: HTML tags are the keyword in html which help us to format the html page and help us to write the 
-      content in different types of styles like <b>, <i>, <u> etc.
-	Tags are two type :-
-	1. Opening tag and closing tags with angular brackets ex.< html > < /html > , < head >, <h1> < /h1 > etc.	
-	2. Self Closing tags, empty, void tags ex. < tags / > , < img >, < br >, < meta >, < hr > etc.
+	<p>5.What are different tyoes of lists in HTML?</p>
+	<p>Ans:-HTML, there are 3 types of lists:</p>
+	<p>1.Orderd list < ol >. Use to number </p>
+	<p>Ex.<pre>< ol >
+	< li >First item< /li >
+< /ol ></pre></p>	
+	<p>2.Unorderd list < ul >. Use to bullets and circle , square.</ul></p>
+	<p>Ex.<pre>< ul >
+	< li >Item< /li >
+< /ul ></pre></p>
+	<p>3.Definition list < dl >. Use </p>
+	<p>Ex.<pre>< dl >
+	< dd >Item< /dd >
+< /dl ></pre></p><br/>
 
-	Elements: HTML elements wrap up the content in the HTML web page by starting and closing tags like:
- 	<h1>, <p> etc.
+	<p>6.What is the Class attributes in HTML?</p>
+	<p>Ans:-HTML Class :- The Class attributes used to specific one more classnames for an elements.The class name can be 
+			used by CSS and Javascript.
+	</p>
+	<p>Ex:- < div Class ="d1">HII Everyone< /div ></p><br/>
 
-2.	What are tags and attributes in HTML? 
-Ans:- Tags:- HTML tags are the keyword in html which help us to format the html page and help us to write the 
-            content in different types of styles
- 
-      Attributes:- Attributes provide extra information to the html elements like class name, background colour,
-		etc. Attributes give actual contents to change and different value to change actual contents
+	<p>7.What is the different between the ID attributes and the CLASS attribute od HTML elements?</p>
+	<p>Ans:- ID :- 'id' attribute: it should be unique within a page .It's used to uniquely identify a specific alements.</p>
+			<p>EX:- < input type="text" name="Firstname" id="firstname1" placeholder="First Name">.</p><br/>
 
-3.	What are void elements in HTML?
-Ans:-  Void Element:- Void elements in HTML are tags that don't have a closing tag. They're like one-piece tags.
-		Examples include`<br>`, `<img>`, and `<hr>`. 
-   	They're used for specific purposes like line breaks, images, and horizontal lines.
+		<p>Class :- The class attribute used to specific one or more classnames for an elements. The calssname can be used by CSS and Javascript.</p>
+		<p>Ex:- < div Class="d1">HII Everyone < /div ></p> <br/>
 
-4.	What are HTML Entities?
-Ans:- HTML entities are special codes used to display characters that have a specific meaning in HTML, like < and >.
-      For example, "&lt;" represents <, and "&gt;" represents >. Entities help show these characters correctly on 
-      web pages without confusing the browser.
+	<p>8.What are the various formatting tags in HTML?</p>
+	<p>Ans:-HTML has several fromatting tags to structure and style contents.Some common ones include: </p>
+	<p>Ex:- Heading tag (  < h1 > to < /h1 >) use to heading of different levels.</p>
+	<p>Paragraph tag (  < p > to < /p >) use to paragraph of taxt.</p>
+	<p>Bold tag (  < b > or < strong >) use to text bold.</p>
+	<p>Italic tag (  < i > to < em >) use to text italic.</p>
+	<p>Break tag (  < br >) use to line break and new line.</p>
+	<p>horizontal rule tag (  < hr >) use to inserts a horizontal line.</p><br/>
 
-5.	What are different types of lists in HTML?
-Ans:- HTML, there are 3 types of lists: 
-	1.Ordered list ( <ol> ). Use to number
-	Ex. <ol>
-  		<li>First item</li>
-	    </ol>
+	<p>9.How is Cell padding different form Cell spacing?</p>
+	<p>Ans:- HTML Cell padding and Cell spacing are two attributes used for formatting table cells.</p>
+		<p>Cell padding :- cellpadding helps to control the white space that is present between the border of the cell and the contents within the
+			cell.The default value of cell padding is 1.
+		</p>
+		<p>Cell spacing :- cellspacing helps to st the space between the single cells.The default cell spacing value is 2. </p><br/>
 
-	2.Unordered list ( <ul> ). Use to  bullets and circle,square.
-	Ex. <ul>
-		<li>item</li>
-	       </ul>
+	<p>10.How can we club two or more rows or columns into a single row or columns in an HTML table?</p>
+	<p>Ans:-Yes <pre>
+			< table border="1">
+				< tr>
+				< th rowspan="2">Item< /th>
+				< th colspan="2">Item< /th>
+				< /tr>
+				< tr>
+					< th>Test< /th>
+					< th>Test< /th>
+				< /tr>
+			< /table>
+		</pre>
+	</p><br>
 
-	3.Definition list ( <dl> ). Use 
-  		 <dl>
-  		     <dt>Term 1</dt>
-   		     <dd>Description 1</dd>
-   	         </dl>
-6.	What is the ‘class’ attribute in HTML?
-Ans:- HTML Class :- The class attribute used to specifies one or more classnames for an element. The class
-		    name can be used by CSS and JavaScript.
-	    Ex:-  <div class=”D1”>Hii everyone </div>
+	<p>11.What is the difference between a block-level element and an inline elements?</p>
+	<p>Ans:- Block-Lvel Element :- Block-lvel element in html start on a new line and take up the full width available.They create a "Block" of content.</p>
+	<p>Ex:- < div > , < p > , < h1 > to < h6 > and < ul >.</p>
+	<p>Inline Element :- Inline element do not start on a new line and only take up as much as necessary.They flow within the content and do not
+		create new "Blocks".</p><br>
 
-7.	What is the difference between the ‘id’ attribute and the ‘class’ attribute of HTML elements?
-Ans:- Id :- 'id' attribute: It should be unique within a page. It's used to uniquely identify a specific element.
-	  Ex:- <input type=”text” name=”firstname” id=”firstname1” placeholder=”First Name”>.
+	<p>12.How to create a Hyperlink in HTML?</p>
+	<p>Ans:- Create a hyperlink in html, use the < a > ( anchor ) tag.and "href" attributes use url address.</p>
+	<p>Ex:-  < a href="https://www.google.com" > Mypage < /a ></p><br>
 
-      Class :- The class attribute used to specifies one or more classnames for an element. The classname 
-	       can be used by CSS and JavaScript.
-	    Ex:-  <div class=”D1”>Hii everyone </div>
+	<p>13.What is the of an Iframe tag?</p>
+	<p>Ans:- The < iframe > tag in html is used to embed another document or webpage within the current document.The content of the webpage at 
+	"https://www.google.com" will be displayed within the iframe on the current page.</p>
+	<p>Ex:- < iframe src="https://www.google.com" frameborder="0"  width="400" height="200">< /iframe >.</p><br>
 
-8.	What are the various formatting tags in HTML?
-Ans:- HTML has several formatting tags to structure and style content. Some common ones include:
-    	   Ex.  Heading tags (`<h1>` to `<h6>`):use to headings of different levels.
-		Paragraph tag (`<p>`): use to  paragraph of text.
-		Bold tag (`<b>` or `<strong>`):use to text bold.
-		Italic tag (`<i>` or `<em>`): use  to text italic.
-		Break tag (`<br>`): use to line break and new line.
-		Horizontal Rule tag (`<hr>`): use to Inserts a horizontal line.
+	<p>14.What is the use of a span tag? Explain with example?</p>
+	<p>Ans:- Span :- Span tag is used as a generic container of inline elements.It is uesd for styling purpose to using class and id attribute
+		or style.Span tag use to css and text background color,font etc change.</p>
+		<p>Ex:- < span style="color: red;" > Red < /span >.</p><br>
 
-9.	How is Cell Padding different from Cell Spacing?
-Ans:- HTML Cellpadding and Cellspacing are the two attributes used for formatting table cells.
+	<p>15.How to Insert a picture into background image of a web page ?</p>
+	<p>Ans:- We can use the background attribute in the body tag to set an image as the background of the webpage.</p>
+	<p>Ex:- < body background="solar-system.jpg">hii < /body >.</p><br>
 
-	Cell Padding :- Cellpadding  helps to control the white space that is present between the border of the cell
-		        and the contents within the cell. The default value of cell padding is 1.
-	Cell Spacing :- Cellspacing helps to set the space between the single cells. The default cell spacing value is 2.
+	<p>16.How are active links different from normal links?</p>
+	<p>Ans:- Active link :- Active links are the apearence of a hyperlink when it being clicked or pressed by the user.</p>
+	<p>Normal link :- Normal links are like button you see on webpage.</p>
+	<p>Ex:- < a href="home.html" > Home < /a >.</p><br>
 
-10.	How can we club two or more rows or columns into a single row or column in an HTML table?
-Ans:-    
-       <table border=”1”>
-		<tr>
-			<td rowspan=”2”>item</td>
-			<td colspan=”2”>item</td>
-		</tr>
-		<tr>
-			<td>test</td>
-			<td>test</td>
-		</tr>
-		
-11.	What is the difference between a block-level element and an inline element?
-Ans:- Block-Level Element : Block-level elements in HTML start on a new line and take up the full width 
-			    available.They create a "block" of content.
-		Ex :-  <div>, <p>, <h1> to <h6>, and <ul>.
+	<p>17.What are the different tags to seperate section of text?</p>
+	<p>Ans:- Separete section of text HTML tags.</p>
+	<p>Ex:- < br >, < span >, < section >,< p > ,< blockquote >.</p><br>
 
-     Inline Element : Inline elements do not start on a new line and only take up as much width as necessary.
-		     They flow within the content and do not create new "blocks."
-		Ex :-  <span>, <a>, <strong>, and <em>.
+	<p>18.What is SVG?</p>
+	<p>Ans:- SVG :- full name is Scalable Vector Graphics.It basically defines vector-based graphics in XML format.Svg graphics do not
+		lose any quality if they are zoomed or resized.</p><br>
 
-12.	How to create a Hyperlink in HTML?
-Ans:- Create a hyperlink in HTML, use the <a> (anchor) tag. and “ href “ attributes use url address.
-		Ex.  <a href="https://www.google.com">Mypage</a>
+	<p>19.What id different between HTML and XHTML?</p>
+	<p>Ans:- HTML :- Hyperlink markup language.It is of document type file format.HTML is not case sensitive.It can be written in upper
+		case or lowercase or a combination of both.</p>
+	<p>XHTML :- Extensible hyperlink merkup language .It is in markup language file format.XHTML is case sensitive.all the code should
+		be in lower case.</p><br>
 
-13.	What is the use of an iframe tag?
-Ans:- The <iframe> tag in HTML is used to embed another document or webpage within the current document.
-     the content of the webpage at "https://www.google.com" will be displayed within the iframe on the current page.
-		Ex.  <iframe src="https://www.google.com" width="500" height="300"> </iframe>.
-
-14.	 What is the use of a span tag? Explain with example?
-Ans:- Span :- Span tag is used as a generic container of inline elements. It is used for styling purpose to using 
-	     class and id attribute or inline style. Span tag use to css and text background color , font etc change.
-	  Ex:- <span style="color: red;"> Red </span>
-
-15.	How to insert a picture into a background image of a web page?
-Ans:- We can use the background attribute in the body tag to set an image as the background of the webpage.
-	Ex:-   <body background="solar system.jpg"> Hii Everyone </body>
-	
-16.	How are active links different from normal links?
-Ans:- Active link :- Active links are the appearance of a hyperlink when it is being clicked or pressed by the user.
-      Normal link :- Normal links are like buttons you see on a webpage.
-	    Ex :-  <a href="home.html">Home</a>
-
-17.	What are the different tags to separate sections of text?
-Ans:- Separate section of text HTML tags
-	   Ex :-  <br>, <span>, <section>, <p>, <blockquote>.
-
-18.	What is SVG?
-Ans:- SVG :- Full name is Scalable Vector Graphics. It basically defines vector-based graphics in XML format.
-	     SVG graphics do NOT lose any quality if they are zoomed or resized.
-
-19.	What is difference between HTML and XHTML?
-Ans:- HTML : - Hypertext Markup Language. It is of document type file format. HTML is not case sensitive.
-	       It can be written in upper case or lowercase or a combination of both.
-      XHTML :- Extensible hypertext markup language. It is in markup language file format. XHTML is case 
-	       sensitive. All the code should be in lower case.
-
-20.	What are logical and physical tags in HTML?
-Ans:-  Logical Tags :- Logical Tags are used in html to display the text according to the logical styles.
-		 Ex :- <strong> , <em>.
-       Physical Tags :- Physical Tags are used in HTML to provide actual physical formatting to the text.
-		 Ex :- <b> , <i> etc..
-</xmp>
+	<p>20.What are Logical and Physical tags in HTML?</p>
+	<p>Ans:- Logical Tag :- Logical tags are used in html to display the text according to the logical styles.</p>
+	<p>Ex:- < strong >, < em >.</p>
+	<p>Physical Tag :- Physical tag are used in html to provide actual physical formatting to the text.</p>
+	<p>Ex:- < b > , < i > etc..</b></p>
 </body>
 </html>
