--- a/Module-1-HTML/Theory/Module 1 HTML.html
+++ b/Module-1-HTML/Theory/Module 1 HTML.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<center><h1>Module-1-HTML</h1></center>
-	<p>1.Are the HTML tags and element the same thing?</p>
+	<h3>1.Are the HTML tags and element the same thing?</h3>
 	<p>Ans:- HTML Tags and Element are not same thing.</p>
 		  <p>HTML Tags:- Html tags are the keyword in html which help us to format the html page and help us to write the 
 			 content in different types of styles like < b >,< i >,< u > etc.</p>
@@ -15,7 +15,9 @@
 		<p>1.Opening tag and closing tags with angular brackets ex.< html >, < /html > , < head > , < h1 >,< /h1 > etc.</p>
 		<p>2.Self Closing tags ,empty,void tags ex. < tags / > , < img > , < br > , < meta > ,< hr > etc.</p>
 		<br/>
-	<p>2.What are tags and attributes in HTML?</p>
+		<hr>
+
+	<h3>2.What are tags and attributes in HTML?</h3>
 	<p>Ans:-Tags:-HTML tags aret the keyword in html which help us to format the html page and help us to write the content
 		in different types of syles.
 	</p>
@@ -23,17 +25,19 @@
 		Attributes:-Attributes provide extra information to the html element like class name,background colour,etc.Attributes
 		give actual contents to change and diiffrenet value to change actual contents.
 	</p><br/>
-	<p>3.What are void element in HTML?</p>
+	<hr>
+	<h3>3.What are void element in HTML?</h3>
 	<p>Ans:-Void Element:- Void elements in html are tags that don't have a closing tag.They're like one -piece tags.
 			Example include < br > , < img > and < hr >. </p>
 		 <p>They're used for specific purpose like line breaks , image and horizontal lines.</p><br/>
-	<p>4.What are HTML Entities?</p>
+		 <hr>
+	<h3>4.What are HTML Entities?</h3>
 	<p>Ans:-HTML Entities are special codes used to diplay characters that have a specific meanig in HTML, like < and >. for
 			example,"&lt;" represents <, and "&gt;" represents >. Entities help show these characters correctly on webpages 
 			without confusing the browser.
 	</p><br/>
-
-	<p>5.What are different tyoes of lists in HTML?</p>
+	<hr>
+	<h3>5.What are different tyoes of lists in HTML?</h3>
 	<p>Ans:-HTML, there are 3 types of lists:</p>
 	<p>1.Orderd list < ol >. Use to number </p>
 	<p>Ex.<pre>< ol >
@@ -47,21 +51,21 @@
 	<p>Ex.<pre>< dl >
 	< dd >Item< /dd >
 < /dl ></pre></p><br/>
-
-	<p>6.What is the Class attributes in HTML?</p>
+<hr>
+	<h3>6.What is the Class attributes in HTML?</h3>
 	<p>Ans:-HTML Class :- The Class attributes used to specific one more classnames for an elements.The class name can be 
 			used by CSS and Javascript.
 	</p>
 	<p>Ex:- < div Class ="d1">HII Everyone< /div ></p><br/>
-
-	<p>7.What is the different between the ID attributes and the CLASS attribute od HTML elements?</p>
+	<hr>
+	<h3>7.What is the different between the ID attributes and the CLASS attribute od HTML elements?</h3>
 	<p>Ans:- ID :- 'id' attribute: it should be unique within a page .It's used to uniquely identify a specific alements.</p>
 			<p>EX:- < input type="text" name="Firstname" id="firstname1" placeholder="First Name">.</p><br/>
 
 		<p>Class :- The class attribute used to specific one or more classnames for an elements. The calssname can be used by CSS and Javascript.</p>
 		<p>Ex:- < div Class="d1">HII Everyone < /div ></p> <br/>
-
-	<p>8.What are the various formatting tags in HTML?</p>
+		<hr>
+	<h3>8.What are the various formatting tags in HTML?</h3>
 	<p>Ans:-HTML has several fromatting tags to structure and style contents.Some common ones include: </p>
 	<p>Ex:- Heading tag (  < h1 > to < /h1 >) use to heading of different levels.</p>
 	<p>Paragraph tag (  < p > to < /p >) use to paragraph of taxt.</p>
@@ -69,15 +73,15 @@
 	<p>Italic tag (  < i > to < em >) use to text italic.</p>
 	<p>Break tag (  < br >) use to line break and new line.</p>
 	<p>horizontal rule tag (  < hr >) use to inserts a horizontal line.</p><br/>
-
-	<p>9.How is Cell padding different form Cell spacing?</p>
+	<hr>
+	<h3>9.How is Cell padding different form Cell spacing?</h3>
 	<p>Ans:- HTML Cell padding and Cell spacing are two attributes used for formatting table cells.</p>
 		<p>Cell padding :- cellpadding helps to control the white space that is present between the border of the cell and the contents within the
 			cell.The default value of cell padding is 1.
 		</p>
 		<p>Cell spacing :- cellspacing helps to st the space between the single cells.The default cell spacing value is 2. </p><br/>
-
-	<p>10.How can we club two or more rows or columns into a single row or columns in an HTML table?</p>
+		<hr>
+	<h3>10.How can we club two or more rows or columns into a single row or columns in an HTML table?</h3>
 	<p>Ans:-Yes <pre>
 			< table border="1">
 				< tr>
@@ -91,54 +95,55 @@
 			< /table>
 		</pre>
 	</p><br>
-
-	<p>11.What is the difference between a block-level element and an inline elements?</p>
+	<hr>
+	<h3>11.What is the difference between a block-level element and an inline elements?</h3>
 	<p>Ans:- Block-Lvel Element :- Block-lvel element in html start on a new line and take up the full width available.They create a "Block" of content.</p>
 	<p>Ex:- < div > , < p > , < h1 > to < h6 > and < ul >.</p>
 	<p>Inline Element :- Inline element do not start on a new line and only take up as much as necessary.They flow within the content and do not
 		create new "Blocks".</p><br>
-
-	<p>12.How to create a Hyperlink in HTML?</p>
+	<hr>
+	<h3>12.How to create a Hyperlink in HTML?</h3>
 	<p>Ans:- Create a hyperlink in html, use the < a > ( anchor ) tag.and "href" attributes use url address.</p>
 	<p>Ex:-  < a href="https://www.google.com" > Mypage < /a ></p><br>
-
-	<p>13.What is the of an Iframe tag?</p>
+	<hr>
+	<h3>13.What is the of an Iframe tag?</h3>
 	<p>Ans:- The < iframe > tag in html is used to embed another document or webpage within the current document.The content of the webpage at 
 	"https://www.google.com" will be displayed within the iframe on the current page.</p>
 	<p>Ex:- < iframe src="https://www.google.com" frameborder="0"  width="400" height="200">< /iframe >.</p><br>
-
-	<p>14.What is the use of a span tag? Explain with example?</p>
+	<hr>
+	<h3>14.What is the use of a span tag? Explain with example?</h3>
 	<p>Ans:- Span :- Span tag is used as a generic container of inline elements.It is uesd for styling purpose to using class and id attribute
 		or style.Span tag use to css and text background color,font etc change.</p>
 		<p>Ex:- < span style="color: red;" > Red < /span >.</p><br>
-
-	<p>15.How to Insert a picture into background image of a web page ?</p>
+	<hr>
+	<h3>15.How to Insert a picture into background image of a web page ?</h3>
 	<p>Ans:- We can use the background attribute in the body tag to set an image as the background of the webpage.</p>
 	<p>Ex:- < body background="solar-system.jpg">hii < /body >.</p><br>
-
-	<p>16.How are active links different from normal links?</p>
+	<hr>
+	<h3>16.How are active links different from normal links?</h3>
 	<p>Ans:- Active link :- Active links are the apearence of a hyperlink when it being clicked or pressed by the user.</p>
 	<p>Normal link :- Normal links are like button you see on webpage.</p>
 	<p>Ex:- < a href="home.html" > Home < /a >.</p><br>
-
-	<p>17.What are the different tags to seperate section of text?</p>
+	<hr>
+	<h3>17.What are the different tags to seperate section of text?</h3>
 	<p>Ans:- Separete section of text HTML tags.</p>
 	<p>Ex:- < br >, < span >, < section >,< p > ,< blockquote >.</p><br>
-
-	<p>18.What is SVG?</p>
+	<hr>
+	<h3>18.What is SVG?</h3>
 	<p>Ans:- SVG :- full name is Scalable Vector Graphics.It basically defines vector-based graphics in XML format.Svg graphics do not
 		lose any quality if they are zoomed or resized.</p><br>
-
-	<p>19.What id different between HTML and XHTML?</p>
+	<hr>
+	<h3>19.What id different between HTML and XHTML?</h3>
 	<p>Ans:- HTML :- Hyperlink markup language.It is of document type file format.HTML is not case sensitive.It can be written in upper
 		case or lowercase or a combination of both.</p>
 	<p>XHTML :- Extensible hyperlink merkup language .It is in markup language file format.XHTML is case sensitive.all the code should
 		be in lower case.</p><br>
-
-	<p>20.What are Logical and Physical tags in HTML?</p>
+	<hr>
+	<h3>20.What are Logical and Physical tags in HTML?</h3>
 	<p>Ans:- Logical Tag :- Logical tags are used in html to display the text according to the logical styles.</p>
 	<p>Ex:- < strong >, < em >.</p>
 	<p>Physical Tag :- Physical tag are used in html to provide actual physical formatting to the text.</p>
 	<p>Ex:- < b > , < i > etc..</b></p>
+	<hr>
 </body>
 </html>
