--- a/Module-1-HTML/Theory/Module 1 HTML.html
+++ b/Module-1-HTML/Theory/Module 1 HTML.html
@@ -14,6 +14,8 @@
 		  <p>Tags are two type :-</p>
 		<p>1.Opening tag and closing tags with angular brackets ex.< html >, < /html > , < head > , < h1 >,< /h1 > etc.</p>
 		<p>2.Self Closing tags ,empty,void tags ex. < tags / > , < img > , < br > , < meta > ,< hr > etc.</p>
+		<p>Elements: HTML elements wrap up the content in the HTML web page by starting and closing tags like:<p> 
+		   </p>
 		<br/>
 		<hr>
 
