--- a/Module-3-HTML5/index.html
+++ b/Module-3-HTML5/index.html
@@ -14,23 +14,9 @@
     <h2>1.What are the new tags added in HTML5?</h2>
     <p><strong>Ans => </strong>The New Tag added in HTML5.</p>
     <ul>
-        <li>article</li>
-        <li>aside</li>
-        <li>details</li>
-        <li>figcaption</li>
-        <li>figure</li>
-        <li>footer</li>
-        <li>header</li>
-        <li>main</li>
-        <li>mark</li>
-        <li>nav</li>
-        <li>section</li>
-        <li>summary</li>
-        <li>time</li>
         <li>audio</li>
         <li>video</li>
-        <li>embed</li>
-        <li>canvas</li>
+        <li>input date</li>
     </ul>
     <hr>
 
@@ -70,8 +56,6 @@
 
     <h2>4.Canvas and SVG tags</h2>
     <p><strong>Ans => </strong>....</p>
-
-
     <hr>
 
 
